overflow fix

--- a/JAZA-FRONT/src/App.css
+++ b/JAZA-FRONT/src/App.css
@@ -6,10 +6,6 @@
   --brown: #3c281e;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 body,
 .page {
   font-family: 'Segoe UI', sans-serif;
@@ -18,7 +14,7 @@ body,
   background-color: var(--beige);
   color: var(--brown);
   height: 100%;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
 }
 
